--- a/FA3_Rodriguez/style.css
+++ b/FA3_Rodriguez/style.css
@@ -1,5 +1,5 @@
 		body {
-				background-image: url("https://i.pinimg.com/564x/2b/89/31/2b8931cd33717efe088ce19a3a1dee8a.jpg");
+				background-image: url("https://images6.alphacoders.com/132/1323578.png");
 				background-size: 1400px 1500px;
 				background-repeat: no-repeat;
 				background-position: center;
